feat: implement M-009 data integration module with frontend services, backend sync controllers, and comprehensive end-to-end testing.